# jzen

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_SPEC.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README-zh.md  README.md  SECURITY.md  TODO.md  install.sh  test.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
skills/jzen/: SKILL.md
src/: cli.rs  i18n.rs  main.rs  output.rs
src/command/: mod.rs  read.rs  repair.rs  write.rs
src/engine/: diff.rs  edit.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs
tap/Formula/: jed.rb  jzen.rb
tests/: command_integration.rs
