[package]
name = "jed"
version = "0.1.0"
edition = "2024"
description = "Jed — A dual-interface JSON editor for humans and AI agents"
license = "MIT"

[[bin]]
name = "jed"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
strip = true
opt-level = 3
lto = true

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }
